[package]
name = "faern-esp-idf-template"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart", "native"] }

[build-dependencies]
embuild = "0.31"
